crates/pcb-zen/tests/snapshots/assert__snapshot_check_false_should_error.snap
---
source: crates/pcb-zen/tests/assert.rs
expression: snapshot_output
---
Error: failing condition
   ╭─[ [TEMP_DIR]test.zen:3:1 ]
   │
 3 │ check(False, "failing condition")
   │ ────────────────┬────────────────  
   │                 ╰────────────────── failing condition
───╯
